--- a/.github/workflows/mytestex.yml
+++ b/.github/workflows/mytestex.yml
@@ -18,4 +18,5 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "This job's status is ${{ job.status }}."
+      - run: 'ls -al'
 
