--- a/.github/workflows/mytestex.yml
+++ b/.github/workflows/mytestex.yml
@@ -10,6 +10,7 @@ jobs:
       - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
       - name: Check out repository code
         uses: actions/checkout@v3
-      - run: ${{ secrets.MY_SECRET_NAME }}  
+      - run: echo ${{ secrets.MY_SECRET_NAME }}
+      
 
 
